# releaser

./: Cargo.toml  Cross.toml  LICENSE  README.md  build.sh  index.js  package.json  pnpm-lock.yaml  releaser-manifest.json
.github/workflows/: ci.yml
scripts/: postinstall.js
src/: main.rs
src/changelog/: manager.rs  mod.rs
src/cli/: args.rs  mod.rs
src/git/: commands.rs  mod.rs
src/logging/: logger.rs  mod.rs
src/package/: manager.rs  mod.rs  types.rs
src/utils/: file_utils.rs  mod.rs
src/versionning/: mod.rs  semver.rs
