[package]
name = "releaser"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
regex = "1.10.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }

[dev-dependencies]
mockall = "0.11.3"
tempfile = "3.3.0"
